# Lichtsteuerung

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  ControlItem.qml  ControlView.qml  Deploy on Windows.md  DevicePrototypeView.qml  DeviceView.qml  DimmerGroupControl.qml  Docker.md  Dockerfile  Dockerfile-windows-ci  HardwareInterface.h  Lichtsteuerung.pro  LoginView.qml  ModelView.qml  ModuleProgramView.qml  ModuleView.qml  ProgramBlockConnection.qml  ProgramBlockEntry.qml  ProgrammControl.qml  ProgrammPrototypeView.qml  ProgrammView.qml  README.md  SettingsView.qml  SwitchGroupControl.qml  TextInputField.qml  TextUnderline.qml  applicationdata.cpp  applicationdata.h  boost.md  build_aubio.sh  channel.cpp  channel.h  channelprogrammeditor.cpp  channelprogrammeditor.h  codeeditorhelper.cpp  (+56 more)
src/: CMakeLists.txt  ControlView.qml  DevicePrototypeView.qml  DeviceView.qml  HardwareInterface.h  Lichtsteuerung.pro  LoginView.qml  ModelView.qml  ModuleProgramView.qml  ModuleView.qml  ProgramBlockConnection.qml  ProgrammPrototypeView.qml  ProgrammView.qml  SettingsView.qml  SpotifyLoginView.qml  SwitchGroupControl.qml  Test.qml  VerticalTabBar.qml  applicationdata.cpp  applicationdata.h  channel.h  channelprogrammeditor.cpp  codeeditorhelper.cpp  codeeditorhelper.h  colorplot.cpp  colorplot.h  controlitem.cpp  controlitem.h  controlitemdata.cpp  controlitemdata.h  controlpanel.cpp  controlpanel.h  device.cpp  device.h  deviceprototype.cpp  deviceprototype.h  dmxchannelfilter.h  dmxinterface.cpp  driver.cpp  errornotifier.cpp  (+46 more)
src/audio/: audiocapturemanager.cpp  audiocapturemanager.h  audioeventdata.cpp  audioeventdata.h  remotevolume.cpp  remotevolume.h  sample.h  systemvolume.cpp  systemvolume.h
src/audio/aubio/: aubiocapi.cpp  aubiocapi.h  onsetanalysis.cpp  onsetanalysis.h  spectrumanalysis.cpp  spectrumanalysis.h  tempoanalysis.cpp  tempoanalysis.h
src/dmx/: HardwareInterface.h  artnet_server.cpp  artnet_server.h  channel.cpp  channel.h  device.cpp  device.h  deviceprototype.cpp  deviceprototype.h  dmxchannelfilter.cpp  dmxchannelfilter.h  driver.cpp  driver.h  namedobject.cpp  namedobject.h  programm.cpp  programm.h  programmprototype.cpp  programmprototype.h  susbdmxdriver.cpp  susbdmxdriver.h
src/gui/: audioeventdataview.cpp  audioeventdataview.h  channelprogrammeditor.cpp  channelprogrammeditor.h  colorplot.cpp  colorplot.h  controlitem.cpp  controlitem.h  controlitemdata.cpp  controlitemdata.h  controlpanel.cpp  controlpanel.h  graph.cpp  graph.h  gridbackground.cpp  gridbackground.h  linegeometry.cpp  linegeometry.h  mapeditor.cpp  mapeditor.h  mapview.cpp  mapview.h  oscillogram.cpp  oscillogram.h  polygon.cpp  polygon.h  programblockeditor.cpp  programblockeditor.h
src/icons/app/: myicon.icns
src/icons/sort_order/: sort-by-alphabet_source  sort-reverse-alphabetical-order_source
src/icons/windows/: readme.txt  ressources.rc
src/lib/: build_libs.sh
src/lib/RtAudio/: build_rtAudio.sh
src/lib/aubio/: .gitignore  build_aubio.sh
src/lib/boost/: .gitignore  installOrBuild.sh  libboost_context-vc141-mt-x32-1_66.lib  libboost_context-vc141-mt-x64-1_66.lib
src/lib/libbacktrace/: .gitignore  build.sh
src/lib/qtmqtt/: getAndUpdate.sh
src/lib/quazip/: .gitignore  update_and_build.sh
src/lib/scripts/: clone_or_pull.sh  set_env.sh
src/lib/segvcatch/: .gitignore  build.sh
src/modules/: boostloopprogramcontextswitcher.cpp  boostloopprogramcontextswitcher.h  compiler.cpp  compiler.h  consumer.hpp  controller.cpp  controller.h  controlpoint.hpp  dmxconsumer.cpp  dmxconsumer.h  dmxprogram.cpp  dmxprogram.h  dmxprogramblock.cpp  dmxprogramblock.h  fftoutput.hpp  filter.hpp  json_storage.cpp  json_storage.h  ledconsumer.cpp  ledconsumer.h  loopprogram.hpp  module.h  modulemanager.cpp  modulemanager.h  mqtt.hpp  mqttimpl.cpp  mqttimpl.h  program.hpp  programblock.cpp  programblock.h  property.hpp  scanner.hpp  spotify.hpp  spotifyobjetcs.hpp  storage.hpp  testmodul.cpp  testmodul.h  types.h
src/programms/: boostloopprogramcontextswitcher.h  compiler.cpp  compiler.h  consumer.hpp  controller.cpp  controller.h  controlpoint.hpp  dmxconsumer.cpp  dmxconsumer.h  dmxprogram.cpp  dmxprogram.h  dmxprogramblock.cpp  filter.hpp  json_storage.cpp  json_storage.h  loopprogram.hpp  module.h  modulemanager.cpp  modulemanager.h  programblock.cpp  programblock.h  property.hpp  storage.hpp  testmodul.cpp  types.h
src/qml/: AudioEventsView.qml  BarMapView.qml  ControlItem.qml  ControlItemBlock.qml  DevicePrototypeView.qml  DeviceView.qml  DimmerGroupControl.qml  FFTGraphView.qml  InfoScreenPropertiesView.qml  LoginView.qml  ModelView.qml  ModifyThemePane.qml  ModuleProgramView.qml  ModuleView.qml  ProgramBlockControl.qml  ProgramBlockEntry.qml  ProgrammControl.qml  ProgrammPrototypeView.qml  ProgrammView.qml  SettingsView.qml  SlideShowWindow.qml  SpotifyLoginView.qml  SwitchGroupControl.qml  TextFieldFileChooser.qml  UserSettingsPopup.qml  VerticalTabButton.qml  main.qml
src/qml/ControlPane/: ControlItem.qml  ControlItemBlock.qml  ControlView.qml  DimmerGroupControl.qml  ProgramBlockControl.qml  ProgrammControl.qml  SwitchGroupControl.qml
src/qml/DMX/: DMXChannelUsage.qml  DevicePrototypeView.qml  DeviceView.qml  ModelView.qml  ProgrammPrototypeView.qml  ProgrammView.qml
src/qml/HelpSystem/: Help.qml  HelpEntry.qml  (+1 more)
src/spotify/: albumobject.cpp  albumobject.h  artistobject.cpp  artistobject.h  audioanalysisobject.cpp  audioanalysisobject.h  audiofeaturesobject.cpp  audiofeaturesobject.h  currentplayingobject.cpp  currentplayingobject.h  imageobject.cpp  imageobject.h  sectionobject.cpp  sectionobject.h  segmentobject.cpp  segmentobject.h  spotify.cpp  spotify.h  timeintervalobject.cpp  timeintervalobject.h  trackobject.cpp  trackobject.h  userobject.cpp  userobject.h  util.h
src/test/: DriverDummy.cpp  DriverDummy.h  testloopprogramm.cpp  testloopprogramm.h  testmodulecontroller.cpp  testmodulecontroller.h  testmodulsystem.cpp  testmodulsystem.h  testprogrammblock.cpp  testprogrammblock.h  testsampleclass.cpp  testsampleclass.h
(+110 files in other folders)
